--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^2.0.2",
 		"@eslint/js": "^9.39.2",
-		"@lucide/svelte": "^0.563.1",
+		"@internationalized/date": "^3.10.1",
+		"@lucide/svelte": "^0.561.0",
 		"@playwright/test": "^1.58.1",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.1",
@@ -29,17 +30,22 @@
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^20.19.30",
 		"@vitest/browser-playwright": "^4.0.18",
+		"bits-ui": "^2.15.5",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.14.0",
 		"globals": "^17.2.0",
+		"layerchart": "2.0.0-next.43",
+		"mode-watcher": "^1.1.0",
 		"playwright": "^1.58.1",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"svelte": "^5.49.1",
 		"svelte-check": "^4.3.5",
+		"svelte-sonner": "^1.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2",
 		"tailwindcss": "^4.1.18",
